# ejemplo_django_2025

./: LICENSE  README.md  build.sh  main.py  pyproject.toml  run.sh
noticias/noticias/: asgi.py  settings.py  urls.py  wsgi.py
noticias/sitio/: admin.py  forms.py  models.py  views.py
noticias/sitio/migrations/: 0001_initial.py  0002_noticia_autor.py  0003_remove_noticia_autor.py  0004_noticia_autor_noticia_imagen.py
noticias/sitio/templates/: base.html  datos_usuario.html  ejemplo_form.html  inicio.html  pedacito_noticias.html
