[project]
name = "ejemplo-django-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.4",
    "gunicorn>=23.0.0",
    "ipython>=8.37.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise[brotli]>=6.9.0",
]
